Use latest java-parent-pom